# orb_slam3_ros2

./: .gitignore  2  KeyFrameTrajectory.txt  TODO.md  arm.urdf  frames_2025-01-14_21.27.27.gv  frames_2025-05-13_08.43.59.gv  hexapod.urdf  my_database.db  sample_gait.yaml  simple.yaml  test  test.db  test.yaml  tripod.yaml  tripod_gait.yaml  tripod_stable.yaml  warehouse.db  warehouse.db-journal
src/hexapod_common/: CMakeLists.txt  package.xml
src/hexapod_common/include/hexapod_common/: hexapod.hpp  logging.hpp  requests.hpp  ros_constants.hpp  yaml_utils.hpp
src/hexapod_common/src/: logging.cpp  requests.cpp  yaml_utils.cpp
src/hexapod_control/: CMakeLists.txt  package.xml  plugin_description.xml
src/hexapod_control/config/: default.old.rviz  default.rviz  initial_pose.yml  test.old.rviz
src/hexapod_control/include/hexapod_control/: 6_dof_marker.hpp  arm_control_tab.hpp  commands_tab.hpp  hexapod.hpp  hexapod_control_rviz_panel.hpp  hexapod_ik_base.hpp  ik_base.hpp  node_manager.hpp  planning_group.hpp  poses_tab.hpp  requests.hpp  ros_constants.hpp  warehouse.hpp  warehouse_tab.hpp
src/hexapod_control/include/kinematics/: solver.hpp
src/hexapod_control/include/rviz/: panel.hpp
src/hexapod_control/include/rviz_plugin/: hexapod_control_panel.hpp
src/hexapod_control/launch/: bringup.launch.py
src/hexapod_control/src/: 6_dof_marker.cpp  arm_control_tab.cpp  bound_calculate.cpp  commands_tab.cpp  gait_planner.cpp  hexapod_control.cpp  hexapod_control_rviz_panel.cpp  hexapod_generate_params.cpp  hexapod_ik_base.cpp  hexapod_ik_gz_node.cpp  hexapod_ik_rviz_node.cpp  ik_base.cpp  ik_joint_state.cpp  ik_trajectory.cpp  joint_state_publisher.cpp  kinematics_service.cpp  marker.cpp  node_manager.cpp  planning_group.cpp  pose_publisher.cpp  poses_tab.cpp  requests.cpp  shutdown_controllers.cpp  startup_controllers.cpp  startup_controllers.new.cpp  trajectory_publisher.cpp  visualization_server.cpp  warehouse.cpp  warehouse_tab.cpp
src/hexapod_control/src/kinematics/: solver.cpp
src/hexapod_control/src/node/: arm_control.cpp  leg_control.cpp  marker.cpp
src/hexapod_control/src/rviz/: panel.cpp
src/hexapod_control/src/utils/: urdf_parser.cpp
src/hexapod_description/: CMakeLists.txt  package.xml
src/hexapod_description/config/: default.rviz  hexapod_controllers.yaml  hexapod_sim.rviz  hexapod_sim.yaml  hexapod_standalone.rviz  initial_positions.yaml  joint_limits.yaml
src/hexapod_description/launch/: description.launch.py  display.launch.py
src/hexapod_description/materials/: hexapod.materials.xacro
src/hexapod_description/meshes/arm/: retractor.stl  rotator.stl
src/hexapod_description/meshes/collision/: abductor.stl  base.stl
src/hexapod_description/meshes/leg/: cox_left_bottom.stl  cox_left_top.stl  cox_right_mid.stl  cox_right_top.stl  femur_left_bottom.stl  femur_left_top.stl  femur_right_mid.stl  femur_right_top.stl  tibia_left_bottom.stl  tibia_left_top.stl  tibia_right_bottom.stl  tibia_right_mid.stl
src/hexapod_description/meshes/visual/: femur_left.stl  tibia_left.stl
src/hexapod_description/robots/: arm.urdf.xacro  hexapod.urdf  hexapod.urdf.xacro
src/hexapod_description/ros2_control/: arm.ros2_control.xacro  hexapod.ros2_control.xacro
src/hexapod_description/rviz/: hexapod-pose-planning.rviz  hexapod.old2.rviz  hexapod.rviz
src/hexapod_description/src/: extract_params.cpp
src/hexapod_gait/: CMakeLists.txt  package.xml
src/hexapod_gait/src/: gait_planner.cpp
src/hexapod_motion/: CMakeLists.txt  package.xml
src/hexapod_motion/include/hexapod_motion/: motion.hpp  utils.hpp
src/hexapod_motion/src/: motion_server.cpp  utils.cpp
src/hexapod_rviz_panels/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/hexapod_rviz_panels/include/hexapod_rviz_panels/: joint_manager_panel.hpp
src/hexapod_rviz_panels/src/: joint_manager_panel.cpp
src/hexapod_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml  resources.qrc  rviz_common_plugins.xml
src/hexapod_rviz_plugins/include/hexapod_rviz_plugins/: action_planner.hpp  control_panel.hpp  gait_planner.hpp  joint_state_manager.hpp  motion_editor.hpp
src/hexapod_rviz_plugins/include/joystick_control/: joystick.hpp  rviz_panel.hpp
src/hexapod_rviz_plugins/include/ui/: pose_list.hpp
src/hexapod_rviz_plugins/src/: control_panel.cpp  joint_state_manager.cpp
src/hexapod_rviz_plugins/src/action_planner/: panel.cpp  pose_list.cpp
src/hexapod_rviz_plugins/src/arm_control/: panel.cpp
src/hexapod_rviz_plugins/src/control/: panel.cpp
src/hexapod_rviz_plugins/src/gait_planner/: panel.cpp  pose_list.cpp
src/hexapod_rviz_plugins/src/hexapod_control/: panel.cpp
src/hexapod_rviz_plugins/src/joystick_control/: joystick.cpp  panel.cpp
src/hexapod_rviz_plugins/src/motion_editor/: panel.cpp  pose_list.cpp  utils.cpp
src/hexapod_sim/: CMakeLists.txt  package.xml
src/hexapod_sim/config/: arm_controllers.yml  gz_config.config  hexapod_bridge.yaml  hexapod_bridge.yml  hexapod_controllers.yaml  hexapod_controllers.yml
src/hexapod_sim/include/hexapod_sim_plugins/: ResetListenerSystem.hpp
src/hexapod_sim/launch/: hexapod_spawn.launch.py  old.launch.py  sim.launch.py  spawn_hexapod.launch.py  spawn_hexapod.old.launch.py  spawn_world.launch.py
src/hexapod_sim/models/arm/: model.config  v1.sdf
src/hexapod_sim/models/hexapod/: model.config  v1-full.sdf  v1.sdf
src/hexapod_sim/rviz/: default.rviz
src/hexapod_sim/src/: ResetListenerSystem.cpp
src/hexapod_sim/worlds/: empty_world.sdf  hexapod_world.old.sdf  hexapod_world.sdf  old.world.sdf  test.sdf  world.old.sdf  world.sdf
src/hexapod_teleop/: CMakeLists.txt  package.xml
src/hexapod_teleop/src/: teleop_joy.cpp
src/joystick_control/: CMakeLists.txt  package.xml  plugin_description.xml
src/joystick_control/include/joystick_control/: rviz_panel.hpp
src/joystick_control/src/: rviz_panel.cpp
src/joystick_reader/: CMakeLists.txt
src/joystick_reader/launch/: joystick.launch.py
src/joystick_reader/src/: joystick_reader.cpp  jtc_client.py  old.control.py
src/orbslam3_ros2/: CMakeLists.txt
(+154 files in other folders)
